--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
+alt-profanity-check==1.3.2
 async-timeout==4.0.3
 attrs==23.2.0
 discord==2.3.2
 discord.py==2.3.2
 frozenlist==1.4.1
 idna==3.6
+joblib==1.3.2
 multidict==6.0.4
+numpy==1.26.3
+scikit-learn==1.3.2
+scipy==1.11.4
+threadpoolctl==3.2.0
 yarl==1.9.4
