--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
 alt-profanity-check==1.3.2
+annotated-types==0.6.0
+anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.2.0
+certifi==2023.11.17
 discord==2.3.2
 discord.py==2.3.2
+distro==1.9.0
+exceptiongroup==1.2.0
 frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 idna==3.6
 joblib==1.3.2
 multidict==6.0.4
 numpy==1.26.3
+openai==1.6.1
+pydantic==2.5.3
+pydantic_core==2.14.6
 scikit-learn==1.3.2
 scipy==1.11.4
+sniffio==1.3.0
 threadpoolctl==3.2.0
+tqdm==4.66.1
+typing_extensions==4.9.0
 yarl==1.9.4
