--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 alt-profanity-check==1.3.2
 annotated-types==0.6.0
 anyio==4.2.0
+assemblyai==0.20.2
 async-timeout==4.0.3
 attrs==23.2.0
 CacheControl==0.13.1
@@ -60,4 +61,5 @@ tqdm==4.66.1
 typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.1.0
+websockets==12.0
 yarl==1.9.4
