--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,8 @@ msgpack==1.0.7
 multidict==6.0.4
 numpy==1.26.3
 openai==1.6.1
+opencv-python==4.9.0.80
+pillow==10.2.0
 proto-plus==1.23.0
 protobuf==4.25.1
 pyasn1==0.5.1
@@ -63,3 +65,4 @@ uritemplate==4.1.1
 urllib3==2.1.0
 websockets==12.0
 yarl==1.9.4
+youtube-dl==2021.12.17
